--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     </head>
     <body>
         <p>Hello World !</p>
+
+        <!-- Titres h(n) -->
+        <h1>H1</h1>
+        <h2>H2</h2>
+        <h3>H3</h3>
+        <h4>H4</h4>
+        <h5>H5</h5>
+        <h6>H6</h6>
+        <p>Je suis un paragraphe</p>
+        <p>Et moi un autre</p>
+
     </body>
 </html>
