Lien logo Youtube

--- a/02-youtube.html
+++ b/02-youtube.html
@@ -6,7 +6,11 @@
     </head>
     
     <body>
-        <a href="https://youtube.fr">Youtube</a>
+        
+
+        <a href="https://youtube.fr">
+            <img src="./youtube.png" alt="Logo Youtube" height="100px" />
+        </a>
 
         <ol> <!-- <ul> pour non-ordonnée-->
             <li><a href="https://www.youtube.com/watch?v=QzQ-FOx9HLE">1ère vidéo</a></li>
