Lien entre les pages

--- a/03-blog.html
+++ b/03-blog.html
@@ -10,7 +10,7 @@
             <h1>Blog</h1>
             <nav>
                 <ul>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./04-contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,7 +28,7 @@
         </main>
 
         <footer>
-            <p>© 2022</p>
+            <p>© 2025</p>
         </footer>
 
     </body>
