--- a/04-contact.html
+++ b/04-contact.html
@@ -17,7 +17,7 @@
 
         <main>
         
-            <form method="get">
+            <form method="POST" action="http://localhost/php-sio/index.php">
                 <div>
                     <label for="lastname">Nom</label>
                     <input type="text" name="lastname" id="lastname">
@@ -34,6 +34,14 @@
                     <label for="message">Message</label>
                     <textarea name="message" id="message" 
                     cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                    <label for="favorite-color">Couleur favorite</label>
+                    <input type="color" name="favorite_color" id="favorite-color">
+                </div>
+                <div>
+                    <label for="birthdate">Date de naissance</label>
+                    <input type="date" name="birthdate" id="birthdate">
                 </div>
                 <div>
                     <input type="submit" value="Envoyer">
